package com.HailoOSS.service.config.changelog;

import 'github.com/HailoOSS/config-service/proto/common.proto';

message Request {
    // specify an ID to filter the change log
    optional string id = 4;
	// specify a time range to search between
	optional int64 rangeStart = 1;
	optional int64 rangeEnd = 2;
	// paginate
	optional string lastId = 3;
}

message Response {
	repeated com.HailoOSS.service.config.Change changes = 1;
	optional string last = 2;
}
